@startuml
class AgreementDateToInFutureValidation {
- DateTimeUtil dateTimeUtil
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class PersonFirstNameValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class AgreementDateFromValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


interface TravelCalculatePremiumRequestValidator {
~ List<ValidationError> validate(TravelCalculatePremiumRequest)
}

class DateFromLessThenDateToValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class AgreementDateFromInFutureValidation {
- DateTimeUtil dateTimeUtil
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class ValidationErrorFactory {
- ErrorCodeUtil errorCodeUtil
~ ValidationError buildError(String)
}


class TravelCalculatePremiumRequestValidatorImpl {
- List<TravelRequestValidation> travelValidations
+ List<ValidationError> validate(TravelCalculatePremiumRequest)
}


interface TravelRequestValidation {
~ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}

class PersonLastNameValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class AgreementDateToValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}


class EmptySelectedRisksValidation {
- ValidationErrorFactory errorFactory
+ Optional<ValidationError> execute(TravelCalculatePremiumRequest)
}




TravelRequestValidation <|.. AgreementDateToInFutureValidation
TravelRequestValidation <|.. PersonFirstNameValidation
TravelRequestValidation <|.. AgreementDateFromValidation
TravelRequestValidation <|.. DateFromLessThenDateToValidation
TravelRequestValidation <|.. AgreementDateFromInFutureValidation
TravelCalculatePremiumRequestValidator <|.. TravelCalculatePremiumRequestValidatorImpl
TravelRequestValidation <|.. PersonLastNameValidation
TravelRequestValidation <|.. AgreementDateToValidation
TravelRequestValidation <|.. EmptySelectedRisksValidation
@enduml